# DifferentialExpressionPlugin

./: CMakeLists.txt  PluginInfo.json  README.md  conanfile.py
.github/workflows/: build.yml
docs/: OtherFeatures.md
res/: gene_symbols.csv  resources.qrc
src/: AdditionalSettings.cpp  AdditionalSettings.h  ButtonProgressBar.cpp  ButtonProgressBar.h  DifferentialExpressionPlugin.cpp  DifferentialExpressionPlugin.h  DifferentialExpressionPlugin.json  LoadedDatasetsAction.cpp  LoadedDatasetsAction.h  MultiTriggerAction.cpp  MultiTriggerAction.h  ProgressManager.cpp  ProgressManager.h  TableModel.cpp  TableModel.h  TableSortFilterProxyModel.cpp  TableSortFilterProxyModel.h
